--- a/RollingPaper/RollingPaper/PencilcaseController.xib
+++ b/RollingPaper/RollingPaper/PencilcaseController.xib
@@ -98,11 +98,13 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<string key="IBUINormalTitle">완료</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="169866179">
+								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+								<object class="NSColor" key="IBUITintColor" id="169866179">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
+								<string key="IBUINormalTitle">완료</string>
+								<reference key="IBUIHighlightedTitleColor" ref="169866179"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
@@ -137,6 +139,8 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
+								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+								<reference key="IBUITintColor" ref="169866179"/>
 								<string key="IBUINormalTitle">Undo</string>
 								<reference key="IBUIHighlightedTitleColor" ref="169866179"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
@@ -163,6 +167,8 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
+								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+								<reference key="IBUITintColor" ref="169866179"/>
 								<string key="IBUINormalTitle">Button</string>
 								<reference key="IBUIHighlightedTitleColor" ref="169866179"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
@@ -193,6 +199,8 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
+								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+								<reference key="IBUITintColor" ref="169866179"/>
 								<reference key="IBUIHighlightedTitleColor" ref="169866179"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -428,8 +436,6 @@
 					<string key="className">PencilcaseController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="onSelectColor:">id</string>
-						<string key="onToolTouched:">id</string>
 						<string key="onTouchClear:">id</string>
 						<string key="onTouchColor:">id</string>
 						<string key="onTouchEndPaint:">id</string>
@@ -437,14 +443,6 @@
 						<string key="onTouchUndo:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="onSelectColor:">
-							<string key="name">onSelectColor:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onToolTouched:">
-							<string key="name">onToolTouched:</string>
-							<string key="candidateClassName">id</string>
-						</object>
 						<object class="IBActionInfo" key="onTouchClear:">
 							<string key="name">onTouchClear:</string>
 							<string key="candidateClassName">id</string>
